# meal-tracker

./: README.md  features.md  meal-tracker-data.json
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/api/: admin.py  emails.py  exceptions.py  models.py  nutrition.py  permissions.py  serializers.py  tokens.py  urls.py  views.py
backend/api/chat/: scope.py  system_prompt.py  tools.py  views.py
backend/api/management/commands/: import_meal_data.py
backend/api/migrations/: 0001_initial.py  0002_day_exerciselog_food_meal_naplog_recipe_sleeplog_and_more.py  0003_alter_recipe_options.py  0004_userprofile_onboarded_at.py
backend/api/templates/api/: password_reset_form.html  verify_email.html
backend/api/tests/: conftest.py  test_auth_config.py  test_axes_lockout.py  test_chat.py  test_day.py  test_email_verification_gate.py  test_error_envelope.py  test_food.py  test_login.py  test_logout.py  test_me.py  test_password_change.py  test_password_reset.py  test_recipe.py  test_register.py  test_sleep_nap_exercise.py  test_summaries.py  test_targets.py  test_tokens.py  test_verify_email.py  test_weight_goal.py
backend/config/: settings.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AppShell.tsx  FoodPicker.tsx  MonthPicker.tsx  Placeholder.tsx  ProtectedRoute.tsx  QualityDots.tsx  StatCard.tsx
frontend/src/lib/: apiClient.ts  theme.ts  (+10 more)
(+58 files in other folders)
